test/spec_vectors/align/ok/module_12.wat
(module (memory 0) (func (drop (f32.load align=4 (i32.const 0)))))