test/spec_vectors/align/fail/module_73.wat
(module (memory 0) (func (drop (i32.load align=8 (i32.const 0)))))